; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_mr.c_mlxsw_sp_mr_dev_vif_lookup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_mr.c_mlxsw_sp_mr_dev_vif_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_mr_vif = type { %struct.net_device* }
%struct.mlxsw_sp_mr_table = type { %struct.mlxsw_sp_mr_vif* }
%struct.net_device = type { i32 }

@MAXVIFS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mlxsw_sp_mr_vif* (%struct.mlxsw_sp_mr_table*, %struct.net_device*)* @mlxsw_sp_mr_dev_vif_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mlxsw_sp_mr_vif* @mlxsw_sp_mr_dev_vif_lookup(%struct.mlxsw_sp_mr_table* %0, %struct.net_device* %1) #0 {
  %3 = alloca %struct.mlxsw_sp_mr_vif*, align 8
  %4 = alloca %struct.mlxsw_sp_mr_table*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i64, align 8
  store %struct.mlxsw_sp_mr_table* %0, %struct.mlxsw_sp_mr_table** %4, align 8
  store %struct.net_device* %1, %struct.net_device** %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %28, %2
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @MAXVIFS, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %31

11:                                               ; preds = %7
  %12 = load %struct.mlxsw_sp_mr_table*, %struct.mlxsw_sp_mr_table** %4, align 8
  %13 = getelementptr inbounds %struct.mlxsw_sp_mr_table, %struct.mlxsw_sp_mr_table* %12, i32 0, i32 0
  %14 = load %struct.mlxsw_sp_mr_vif*, %struct.mlxsw_sp_mr_vif** %13, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds %struct.mlxsw_sp_mr_vif, %struct.mlxsw_sp_mr_vif* %14, i64 %15
  %17 = getelementptr inbounds %struct.mlxsw_sp_mr_vif, %struct.mlxsw_sp_mr_vif* %16, i32 0, i32 0
  %18 = load %struct.net_device*, %struct.net_device** %17, align 8
  %19 = load %struct.net_device*, %struct.net_device** %5, align 8
  %20 = icmp eq %struct.net_device* %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %11
  %22 = load %struct.mlxsw_sp_mr_table*, %struct.mlxsw_sp_mr_table** %4, align 8
  %23 = getelementptr inbounds %struct.mlxsw_sp_mr_table, %struct.mlxsw_sp_mr_table* %22, i32 0, i32 0
  %24 = load %struct.mlxsw_sp_mr_vif*, %struct.mlxsw_sp_mr_vif** %23, align 8
  %25 = load i64, i64* %6, align 8
  %26 = getelementptr inbounds %struct.mlxsw_sp_mr_vif, %struct.mlxsw_sp_mr_vif* %24, i64 %25
  store %struct.mlxsw_sp_mr_vif* %26, %struct.mlxsw_sp_mr_vif** %3, align 8
  br label %32

27:                                               ; preds = %11
  br label %28

28:                                               ; preds = %27
  %29 = load i64, i64* %6, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %6, align 8
  br label %7

31:                                               ; preds = %7
  store %struct.mlxsw_sp_mr_vif* null, %struct.mlxsw_sp_mr_vif** %3, align 8
  br label %32

32:                                               ; preds = %31, %21
  %33 = load %struct.mlxsw_sp_mr_vif*, %struct.mlxsw_sp_mr_vif** %3, align 8
  ret %struct.mlxsw_sp_mr_vif* %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
